--- a/sensor/sensor-rust/Cargo.toml
+++ b/sensor/sensor-rust/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 paho-mqtt = "*"
 log = "*"
-soundio = "*"
+soundio = {version="*", git = "https://github.com/Amanita-muscaria/soundio-rs", features = ["pulse_support"]}
 cbor = "*"
 chrono = "*"
 crossbeam = "*"
