Adding comment to helm chart regarding replicaCount

--- a/k8s/manifest/overlays/dev/emqx/kustomization.yaml
+++ b/k8s/manifest/overlays/dev/emqx/kustomization.yaml
@@ -8,7 +8,7 @@ helmCharts:
     version: 5.0.21
     namespace: sctmp-dev
     valuesInline:
-      replicaCount: 1
+      replicaCount: 1  # depending on the number of nodes in your cluster
       service:
         type: LoadBalancer
       ingress:
